fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ footer {
   padding: 10px;
   bottom: 0;
   left: 0;
-  width: 100%;
 }
 
 #a-github{
